--- a/src/components/Hero/styles.module.css
+++ b/src/components/Hero/styles.module.css
@@ -1,5 +1,5 @@
 .bg {
-    background-image: url('img/cat1.jpeg');
+    background-image: url('/img/cat1.jpeg');
     width: 100vw;
     height: 100vh;
 }
